Fix layout issue in docs pages, like jobs
See #30470 for more details.

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -39,9 +39,6 @@ section {
 }
 
 body {
-  display: grid;
-  grid-column-template: auto;
-
   header + .td-outer {
     min-height: 50vh;
     height: auto;
